# RSA-Timing-Lab

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml  tests.yml
results/: README.md
results/results_VulnerableRSA/: detailed_results.csv  keys.csv
results_AlwaysSubstractRSA/: detailed_results.csv  keys.csv
scripts/: run_campaign.py
src/rsa_timing_lab/attacks/: __init__.py  dhem_attack.py
src/rsa_timing_lab/core/: __init__.py  interfaces.py  models.py
src/rsa_timing_lab/targets/: __init__.py  montgomery_always_substract.py  reference_vulnerable_rsa.py
src/rsa_timing_lab/utils/: data_manager.py  math.py  rsa_key_generator.py  timing_data_collector.py
tests/core/: test_models.py
tests/targets/: test_rsa_implementations.py
tests/utils/: test_math.py  test_rsa_key_generator.py
