[build-system]
# Cette section est standard et indique les outils nécessaires pour construire le package
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# --- Métadonnées du Projet ---
name = "rsa-timing-lab"
version = "0.1.0"
description = "A laboratory for studying RSA timing attacks."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name="Votre Nom", email="votre@email.com" },
]

# --- Dépendances du Projet ---
# Listez ici les bibliothèques externes que votre code utilise.
dependencies = [
    "pytest",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/rsa_timing_lab"]
omit = ["*/tests/*", "*/__init__.py"]